# precommit-rs

./: .gitignore  Cargo.toml  LICENSE  PRECOMMIT_CHANGELOG.md  README.md  RELEASES.md  test.py
.github/workflows/: bundle.yml
assets/: README.md  generate_placeholders.sh  icon.icns  make_png.py  precommit-rs.desktop
check-deps/: Cargo.toml  pre-commit-config.yaml
check-deps/src/: main.rs
check-size/: check-size  pre-commit-config.yaml
check-todos/: check-todos.py  pre-commit-config.yaml
crates/check-added-large-files/: Cargo.toml
crates/check-added-large-files/src/: main.rs
crates/check-yaml/: Cargo.toml
crates/check-yaml/src/: main.rs
crates/end-of-file-fixer/: Cargo.toml
crates/end-of-file-fixer/src/: main.rs
crates/pretty-format-json/: Cargo.toml
crates/pretty-format-json/src/: main.rs
crates/trailing-whitespace/: Cargo.toml
crates/trailing-whitespace/src/: main.rs
src/: changelog.rs  cli.rs  config.rs  lib.rs  lock.rs  main.rs  test.ts  validate.rs
src/hooks/: check_added_large_files.rs  check_yaml.rs  end_of_file.rs  mod.rs  pretty_format_json.rs  trailing_whitespace.rs
templates/: python_hook.template  rust_cargo.template  rust_hook.template  shell_hook.template
