[package]
name = "check-yaml"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
precommit-rs = { path = "../../" }

[package.metadata.bundle]
identifier = "com.example.precommit-rs.check-yaml"
icon = ["../../assets/icon.png"]

[package.metadata.bundle.linux]
package_type = "appimage"
desktop_file = { name = "check-yaml", exec = "check-yaml", icon = "precommit-rs" }

[package.metadata.bundle.windows]
package_type = "nsis"
installer_name = "check-yaml-installer"
publisher = "Your Name"
description = "Validate YAML files with precommit-rs."

[package.metadata.bundle.macos]
package_type = "dmg"
name = "check-yaml"
