[package]
name = "end-of-file-fixer"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "End-of-file newline fixer hook for precommit-rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
precommit-rs = { path = "../../" }

[package.metadata.bundle]
identifier = "com.example.precommit-rs.end-of-file-fixer"
icon = ["../../assets/icon.png"]

[package.metadata.bundle.linux]
package_type = "appimage"
desktop_file = { name = "end-of-file-fixer", exec = "end-of-file-fixer", icon = "precommit-rs" }

[package.metadata.bundle.rpm]
package_name = "end-of-file-fixer"
depends = ["bash"]
license = "MIT"
summary = "End-of-file newline fixer hook"
description = "End-of-file newline fixer hook for precommit-rs."

[package.metadata.generate-rpm]
requires = "bash"
assets = [
  { source = "target/release/end-of-file-fixer", dest = "/usr/bin/end-of-file-fixer", mode = "755" }
]

[package.metadata.bundle.windows]
package_type = "nsis"
installer_name = "end-of-file-fixer-installer"
publisher = "Your Name"
description = "End-of-file fixer from precommit-rs."

[package.metadata.bundle.macos]
package_type = "dmg"
name = "end-of-file-fixer"
